# docs/v2/employee/employee_swagger.yaml
@@ -1,4 +1,17 @@
 definitions:
+  employee.EntitiesResponseTemplate-employee_bankAccountResp:
+    properties:
+      count:
+        type: integer
+      next:
+        type: string
+      previous:
+        type: string
+      results:
+        items:
+          $ref: '#/definitions/employee.bankAccountResp'
+        type: array
+    type: object
   employee.EntitiesResponseTemplate-employee_customerResponse:
     properties:
       count:
@@ -11,6 +24,32 @@ definitions:
         items:
           $ref: '#/definitions/employee.customerResponse'
         type: array
+    type: object
+  employee.bankAccountResp:
+    properties:
+      account_number:
+        type: string
+      cash_in:
+        type: number
+      cash_out:
+        type: number
+      create_time:
+        type: string
+      customer_id:
+        type: string
+      id:
+        type: string
+      is_for_payment:
+        type: boolean
+      update_time:
+        type: string
+    type: object
+  employee.bankAccountUpdateReq:
+    properties:
+      cash_in:
+        type: number
+    required:
+    - cash_in
     type: object
   employee.customerCreateReq:
     properties:
@@ -91,6 +130,106 @@ definitions:
 info:
   contact: {}
 paths:
+  /bank-accounts:
+    get:
+      consumes:
+      - application/json
+      description: Show bank accounts
+      operationId: bankaccount-listing
+      parameters:
+      - description: Account number of bank account
+        in: query
+        name: account_number
+        type: string
+      - description: Username of bank account
+        in: query
+        name: username
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/employee.EntitiesResponseTemplate-employee_bankAccountResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/employee.errorResponse'
+      security:
+      - Bearer: []
+      summary: Show bank accounts
+      tags:
+      - Bank account
+  /bank-accounts/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a bank account
+      operationId: bankaccount-get
+      parameters:
+      - description: ID of bank account
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/employee.bankAccountResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/employee.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/employee.errorResponse'
+      security:
+      - Bearer: []
+      summary: Get a bank account
+      tags:
+      - Bank account
+    put:
+      consumes:
+      - application/json
+      description: Deposit a bank account
+      operationId: bankaccount-deposit
+      parameters:
+      - description: Update a bank account
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/employee.bankAccountUpdateReq'
+      - description: ID of bank account
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/employee.bankAccountResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/employee.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/employee.errorResponse'
+      security:
+      - Bearer: []
+      summary: Deposit a bank account
+      tags:
+      - Bank account
   /customers:
     get:
       consumes:
