# internal/controller/http/v1/services/employee/bank_accounts.go
@@ -1,7 +1,7 @@
-package customer
+package employee
 
 import (
-	"github.com/TcMits/wnc-final/internal/controller/http/v1/services/customer/middleware"
+	"github.com/TcMits/wnc-final/internal/controller/http/v1/services/employee/middleware"
 	"github.com/TcMits/wnc-final/internal/usecase"
 	"github.com/TcMits/wnc-final/pkg/entity/model"
 	"github.com/TcMits/wnc-final/pkg/infrastructure/logger"
@@ -9,25 +9,21 @@ import (
 )
 
 type bankAccountRoute struct {
-	uc     usecase.ICustomerBankAccountUseCase
+	uc     usecase.IEmployeeBankAcountUseCase
 	logger logger.Interface
 }
 
-func RegisterBankAccountController(handler iris.Party, l logger.Interface, uc usecase.ICustomerBankAccountUseCase) {
+func RegisterBankAccountController(handler iris.Party, l logger.Interface, uc usecase.IEmployeeBankAcountUseCase) {
 	h := handler.Party("/")
 	route := &bankAccountRoute{
 		uc:     uc,
 		logger: l,
 	}
 	h.Use(middleware.Authenticator(uc.GetSecret(), uc.GetUser))
-	h.Get("/bank-accounts/guest/{id:uuid}", route.guestDetail)
-	h.Get("/bank-accounts/guest", route.guestListing)
 	h.Put("/bank-accounts/{id:uuid}", route.update)
 	h.Get("/bank-accounts/{id:uuid}", route.detail)
 	h.Get("/bank-accounts", route.listing)
-	h.Options("/bank-accounts/guest", func(_ iris.Context) {})
 	h.Options("/bank-accounts", func(_ iris.Context) {})
-	h.Head("/bank-accounts/guest", func(_ iris.Context) {})
 	h.Head("/bank-accounts", func(_ iris.Context) {})
 }
 
@@ -38,6 +34,8 @@ func RegisterBankAccountController(handler iris.Party, l logger.Interface, uc us
 // @Security 	Bearer
 // @Accept      json
 // @Produce     json
+// @Param       account_number query string false "Account number of bank account"
+// @Param       username query string false "Username of bank account"
 // @Success     200 {object} EntitiesResponseTemplate[bankAccountResp]
 // @Failure     500 {object} errorResponse
 // @Router      /bank-accounts [get]
@@ -47,12 +45,27 @@ func (r *bankAccountRoute) listing(ctx iris.Context) {
 		handleBindingError(ctx, err, r.logger, req, nil)
 		return
 	}
-	entities, err := r.uc.ListMine(ctx, &req.Limit, &req.Offset, nil, nil)
+	filterReq := new(bankAccountFilterReq)
+	if err := ctx.ReadQuery(filterReq); err != nil {
+		handleBindingError(ctx, err, r.logger, filterReq, nil)
+		return
+	}
+	w := new(model.BankAccountWhereInput)
+	if filterReq.AccountNumber != nil {
+		w.AccountNumber = filterReq.AccountNumber
+	} else if filterReq.Username != nil {
+		w.HasCustomerWith = []*model.CustomerWhereInput{
+			{
+				Username: filterReq.Username,
+			},
+		}
+	}
+	entities, err := r.uc.List(ctx, &req.Limit, &req.Offset, nil, w)
 	if err != nil {
 		HandleError(ctx, err, r.logger)
 		return
 	}
-	isNext, err := r.uc.IsNext(ctx, req.Limit, req.Offset, nil, nil)
+	isNext, err := r.uc.IsNext(ctx, req.Limit, req.Offset, nil, w)
 	if err != nil {
 		HandleError(ctx, err, r.logger)
 		return
@@ -66,41 +79,9 @@ func (r *bankAccountRoute) listing(ctx iris.Context) {
 	ctx.JSON(paging)
 }
 
-// @Summary     Show guest bank accounts
-// @Description Show guest bank accounts
-// @ID          guestbankaccount-listing
-// @Tags  	    Bank account
-// @Security 	Bearer
-// @Accept      json
-// @Produce     json
-// @Param       account_number query string false "Bank account number"
-// @Success     200 {object} guestBankAccountResp
-// @Failure     500 {object} errorResponse
-// @Router      /bank-accounts/guest [get]
-func (r *bankAccountRoute) guestListing(ctx iris.Context) {
-	req := newListRequest()
-	if err := ctx.ReadQuery(req); err != nil {
-		handleBindingError(ctx, err, r.logger, req, nil)
-		return
-	}
-	filterReq := new(bankAccountFilterReq)
-	if err := ctx.ReadQuery(filterReq); err != nil {
-		handleBindingError(ctx, err, r.logger, filterReq, nil)
-		return
-	}
-	entities, err := r.uc.List(ctx, &req.Limit, &req.Offset, nil, &model.BankAccountWhereInput{
-		AccountNumber: filterReq.AccountNumber,
-	})
-	if err != nil {
-		HandleError(ctx, err, r.logger)
-		return
-	}
-	ctx.JSON(getResponses(entities, getGuestBankAccountResp))
-}
-
-// @Summary     Update a bank account
-// @Description Update a bank account
-// @ID          bankaccount-update
+// @Summary     Deposit a bank account
+// @Description Deposit a bank account
+// @ID          bankaccount-deposit
 // @Tags  	    Bank account
 // @Security 	Bearer
 // @Accept      json
@@ -122,7 +103,7 @@ func (r *bankAccountRoute) update(ctx iris.Context) {
 		handleBindingError(ctx, err, r.logger, updateInReq, nil)
 		return
 	}
-	e, err := r.uc.GetFirstMine(ctx, nil, &model.BankAccountWhereInput{
+	e, err := r.uc.GetFirst(ctx, nil, &model.BankAccountWhereInput{
 		ID: req.id,
 	})
 	if err != nil {
@@ -131,9 +112,10 @@ func (r *bankAccountRoute) update(ctx iris.Context) {
 	}
 	if e == nil {
 		ctx.StatusCode(iris.StatusNoContent)
+		return
 	}
 	i, err := r.uc.ValidateUpdate(ctx, e, &model.BankAccountUpdateInput{
-		IsForPayment: &updateInReq.IsForPayment,
+		CashIn: updateInReq.CashIn,
 	})
 	if err != nil {
 		HandleError(ctx, err, r.logger)
@@ -165,43 +147,13 @@ func (s *bankAccountRoute) detail(ctx iris.Context) {
 		handleBindingError(ctx, err, s.logger, req, nil)
 		return
 	}
-	entity, err := s.uc.GetFirstMine(ctx, nil, &model.BankAccountWhereInput{ID: req.id})
-	if err != nil {
-		HandleError(ctx, err, s.logger)
-		return
-	}
-	if entity != nil {
-		ctx.JSON(getResponse(entity))
-	} else {
-		ctx.StatusCode(iris.StatusNoContent)
-	}
-}
-
-// @Summary     Get a guest bank account
-// @Description Get a guest bank account
-// @ID          guestbankaccount-get
-// @Tags  	    Bank account
-// @Security 	Bearer
-// @Accept      json
-// @Produce     json
-// @Param       id path string true "ID of bank account"
-// @Success     200 {object} guestBankAccountResp
-// @Failure     400 {object} errorResponse
-// @Failure     500 {object} errorResponse
-// @Router      /bank-accounts/guest/{id} [get]
-func (s *bankAccountRoute) guestDetail(ctx iris.Context) {
-	req := new(detailRequest)
-	if err := ctx.ReadParams(req); err != nil {
-		handleBindingError(ctx, err, s.logger, req, nil)
-		return
-	}
 	entity, err := s.uc.GetFirst(ctx, nil, &model.BankAccountWhereInput{ID: req.id})
 	if err != nil {
 		HandleError(ctx, err, s.logger)
 		return
 	}
 	if entity != nil {
-		ctx.JSON(getResponse(entity, getGuestBankAccountResp))
+		ctx.JSON(getResponse(entity))
 	} else {
 		ctx.StatusCode(iris.StatusNoContent)
 	}
