# internal/controller/http/v1/services/employee/response.go
@@ -2,6 +2,7 @@ package employee
 
 import (
 	"strconv"
+	"time"
 
 	"github.com/TcMits/wnc-final/pkg/entity/model"
 	"github.com/TcMits/wnc-final/pkg/tool/jwt"
@@ -51,6 +52,16 @@ type (
 		AccessToken  *string `json:"access_token"`
 		RefreshToken *string `json:"refresh_token"`
 	}
+	bankAccountResp struct {
+		ID            uuid.UUID `json:"id"`
+		CreateTime    time.Time `json:"create_time"`
+		UpdateTime    time.Time `json:"update_time"`
+		CustomerID    uuid.UUID `json:"customer_id"`
+		CashIn        float64   `json:"cash_in"`
+		CashOut       float64   `json:"cash_out"`
+		AccountNumber string    `json:"account_number"`
+		IsForPayment  bool      `json:"is_for_payment"`
+	}
 	// reference on docs
 )
 
@@ -77,7 +88,18 @@ func getDefaultResponse(entity any) any {
 			LastName:  rs.LastName,
 			IsActive:  rs.IsActive,
 		}
-
+	case *model.BankAccount:
+		rs, _ := entity.(*model.BankAccount)
+		result = &bankAccountResp{
+			ID:            rs.ID,
+			CreateTime:    rs.CreateTime,
+			UpdateTime:    rs.UpdateTime,
+			CustomerID:    rs.CustomerID,
+			CashIn:        rs.CashIn,
+			CashOut:       rs.CashOut,
+			AccountNumber: rs.AccountNumber,
+			IsForPayment:  rs.IsForPayment,
+		}
 	case *jwt.TokenPair:
 		rs, _ := entity.(*jwt.TokenPair)
 		result = &tokenPairResponse{
